Version 2.3.0
~~~~~~~~~~~~~
* Post DiFX-2.2
* mk5dir: support SDK9 legacy directories (as per DIMINO 2.2.1 w/ SDK 9.2)
* mk5cp: add mode to "fix" Mark5B format scans
* mk5putdir: replace the on-disk directory

Version 2.2.0
~~~~~~~~~~~~~
* Speed up directory reading
* Better .rpm infrastructure
* IPv6 support added to VSI interface; the whole package at this point is likely IPv6 compliant.
* Count network traffic from all interfaces, not just eth* and ib*.  lo is ignored.
* Fixed bugs preventing packet length filtering working in record5c
* Allow case mismatches in VSI processing
* Respect -u option when calling system commands
* -n option allows enables running external commands without su
* obtain full path to difxlog by reading $DIFXROOT environment
* check for mk5daemon already running
* fileto5c: fix order of ops bug
* fileto5c: copying of directory supported
* now *mark5* identifies a Mark5 unit, not just mark5*
* For VDIF format, save the threads to the .dir file
* Fix for bank_info query with only bank B populated
* Mark5 Watchdog added to mk5daemon proper
* Version for DiFX-2.2, May 31, 2013

Version 2.1.0
~~~~~~~~~~~~~
* Rename from 1.4.2 prior to DiFX-2.1 tagging
* Version for DiFX-2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Post DiFX-2.0.1
* Add SMART dump option to vsn
* Add mk5map utility to recover a directory where one doesn't exist (experimental, Mark5B @ 2 Gbps only now)
* Some additional diagnostics in directory reading
* mk5cp: the --no-dir option allows copying a byte range without reference to a module directory
* mk5cp: some control over the read chunk size is now given to the user
* mk5cp: treat "real time" mode the same way as it is treated in mpifxcorr
* Complete wrapping of XLR calls into WATCHDOG macro statements
* mk5daemon: collect SMART information.  (currently incomplete; information logged upon installation of modules)
* Add stand alone Mark5C data recording program "record5c"